<resources>
    <string name="app_name">GoJeck Project</string>
    <string name="trending_string">Trending</string>
    <string name="sample_subtitle">Python Data Scince Handbook</string>
    <string name="sample_title">jakevdp</string>
    <string name="sample_language">C++</string>
    <string name="no_language">No Language</string>
    <string name="something_went_wrong">Something went wrong&#8230;</string>
    <string name="error_sub_text">An alien is probably blocking your signal</string>
    <string name="retry">RETRY</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_name">Sort by name</string>
</resources>