<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.gojeck.feature.viewModel.RepositoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lyt_network_error_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_fafafa"
        android:visibility="@{model.networkErrorLiveData ? View.VISIBLE : View.GONE}">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nointernet_connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_network_error_something_went_wrong"
            style="@style/TextViewRobotoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/something_went_wrong"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_network_error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_network_error_sub_text"
            style="@style/TextViewErrorSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/error_sub_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_network_error_something_went_wrong" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_network_error_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/drawable_green_button_background"
            android:onClick="@{() -> model.getTrendingRepositories(true)}"
            android:text="@string/retry"
            android:textColor="@color/color_31b057"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
